--- a/m1.html
+++ b/m1.html
@@ -56,7 +56,7 @@
 
         }
     </script>
-        <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyABsmuVtAMqQ35kC7A4OIfgh5v6PSKlvF4&callback=initMap"
+        <script async defer src="https://maps.googleapis.com/maps/api/js?key=yourkey&callback=initMap"
         type="text/javascript"></script>
     
 </body>
